--- a/src/App.css
+++ b/src/App.css
@@ -24,26 +24,33 @@ html{
   font-famiy: Avenir;
 }
 
-/*********************
-SEARCH LOST PETS LINK
-**********************/
+/**************************************
+SEARCH LOST PETS LINK AND SUBMIT BUTTON
+***************************************/
 
 .searchLost{
   font-size: 20px;
   background: #4B99AD;
   padding: 8px 15px 8px 15px;
-  border: none;
+  border: 1px solid #4B99AD;
   color: #fff;
   text-shadow: .5px .5px .5px black;
+  padding-bottom: 47%;
+  z-index: 0;
 }
 a#galBtn.searchLost{
   margin-bottom: 10%;
-  padding-bottom: 100%;
   padding-left: 10%;
   padding-right: 10%;
+  z-index: 0;
 }
 a:hover{
   color: lightgrey;
+}
+li #submit{
+  z-index: 999999;
+  padding: 5% 5% 5% 5%;
+  width: 49%;
 }
 
 /**********
@@ -113,8 +120,9 @@ select{
     box-shadow: 0 0 8px #88D5E9;
     border: 1px solid #88D5E9;
 }
-.firstClass{
-  margin-top: 10%;
+label.firstClass{
+  margin-top: 1%;
+  padding-top: 5%;
 }
 .formStyle1 .fieldDivided{
     width: 49%;
